--- a/frontend/src/css/Sidebar_use.css
+++ b/frontend/src/css/Sidebar_use.css
@@ -22,10 +22,11 @@
   text-align: center;
 }
 
-.logo-text {
-  font-weight: 600;
-  font-size: 1.25rem; /* 20px */
-  color: #262626; /* neutral-800 */
+.logo{
+  width: 30px;
+  height: 30px;
+  background-color: #ffffff;
+  border-radius: 20px;
 }
 
 .links-container {
@@ -58,13 +59,14 @@
 
 /* --- Icon and Image Styles --- */
 .sidebar-icon-style {
-  color: #404040; /* neutral-700 */
+  color: #949494; /* neutral-700 */
   height: 1.25rem; /* h-5 */
   width: 1.25rem; /* w-5 */
   flex-shrink: 0;
 }
 
 .profile-avatar {
+  background-color: #e5e5e5;
   height: 1.75rem; /* h-7 */
   width: 1.75rem; /* w-7 */
   flex-shrink: 0;
