--- a/frontend/src/components/MagicBento/MagicBento.css
+++ b/frontend/src/components/MagicBento/MagicBento.css
@@ -141,9 +141,10 @@
     grid-row: 2 / span 2;
   }
 
-  .card:nth-child(6) {
-    grid-column: 4;
+  .card:nth-child(5) {
+    grid-column: 3 / span 2;
     grid-row: 3;
+    aspect-ratio: 8/3;
   }
 }
 
